--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -6,21 +6,41 @@
 <div th:replace="fragments :: page-header"></div>
 
 <div class="container body-content">
-    <input type="radio" name="artists" id="all" value="all">
-    <label for="all">All Artists</label>
-    <input type="radio" name="artists" id="name" value="name">
-    <label for="name">Name</label>
-    <input type="radio" name="artists" id="style" value="style">
-    <label for="style">Style</label>
-    <input type="radio" name="artists" id="location" value="location">
-    <label for="location">Location</label>
+    <!DOCTYPE html>
+    <html xmlns:th="http://www.thymeleaf.org/">
+    <head th:replace="fragments :: head">
+    </head>
+    <body>
 
-    <p>
-        <label for="searchTerm">Keyword:</label>
-        <input type="text" name="searchTerm" id="searchTerm" />
-    </p>
+    <div th:replace="fragments :: page-header"></div>
 
-    <input type="submit" value="Search" />
+    <div class="container body-content">
+
+        <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
+
+        <form th:action="@{/search/results}" method = "post">
+            <h2>Search by:</h2>
+
+            <p>
+            <span th:each="column : ${columns}">
+                <input
+                        type="radio"
+                        name="searchType"
+                        th:id="${column.key}"
+                        th:value="${column.key}"
+                        th:checked="${column.key == 'all'}"/>
+                <label th:for="${column.key}" th:text="${column.value}"></label>
+            </span>
+
+            </p>
+
+            <p>
+                <label for="searchTerm">Keyword:</label>
+                <input type="text" name="searchTerm" id="searchTerm" />
+            </p>
+
+            <input type="submit" value="Search" />
+        </form>
 </div>
 </body>
 </html>
