--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -23,6 +23,11 @@
                 <li><a th:href="@{/search}">Search</a></li>
             </ul>
         </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a th:href="@{/add}">Add Tattoo Artist</a></li>
+            </ul>
+        </div>
     </div>
 </div>
 
