--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -21,11 +21,8 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a th:href="@{/search}">Search</a></li>
-            </ul>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
                 <li><a th:href="@{/add}">Add Tattoo Artist</a></li>
+                <li><a th:href="@{/logout}">Logout</a></li>
             </ul>
         </div>
     </div>
