--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -7,6 +7,7 @@
     <link th:href="@{/css/tattoo_finder.css}" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Miltonian&display=swap" rel="stylesheet">
     <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
 
     <title th:text="${title}"></title>
 </head>
@@ -20,8 +21,8 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a th:href="@{/search}">Search</a></li>
-                <li><a th:href="@{/add}">Add Tattoo Artist</a></li>
+                <li><a class="fas fa-search" th:href="@{/search}"></a></li>
+                <li th:if="${role == 'admin'}"><a class="fas fa-plus" th:href="@{/add}"> Tattoo Artist</a></li>
                 <li><a th:href="@{/logout}">Logout</a></li>
             </ul>
         </div>
