--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -18,7 +18,9 @@
         </li>
     </ul>
     </p>
-
+    <p>Favorite Piece:
+        <img th:src="@{'/images/' + ${artist.img}}">
+    </p>
 </div>
 
 
