--- a/src/main/resources/static/css/tattoo_finder.css
+++ b/src/main/resources/static/css/tattoo_finder.css
@@ -25,6 +25,11 @@ td {
     vertical-align: top;
 }
 
+img{
+    width: 300px;
+    height: 300px;
+}
+
 tr:nth-child(odd) {
     background-color: #e4e4e4;
 }
