--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -34,6 +34,12 @@
         </label>
         <span th:errors="${artist.location}" class="error"></span>
     </div>
+    <div class="form-group">
+        <label th:for="name">Favorite Piece
+            <input type="file" class="form-control" th:field="${artist.img}" />
+        </label>
+        <span th:errors="${artist.img}" class="error"></span>
+    </div>
 
     <input type="submit" value="Add Artist" />
 </form>
