--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,6 +7,7 @@
 
 <form method="post">
     <div class="form-group">
+        <h1>Login</h1>
         <label th:for="username">Email
             <input class="form-control" th:field="${loginFormDTO.username}">
         </label>
