--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,6 +7,7 @@
 
 <form method="post">
     <div class="form-group">
+        <h1>Register</h1>
         <label>Email
             <input class="form-control" th:field="${registerFormDTO.username}" />
         </label>
